# cbot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: Algorithm.hpp  BinanceFeed.hpp  BookTicker.hpp  Cbot.hpp  ChartServer.hpp  CoinbaseFeed.hpp  Feed.hpp  KrakenFeed.hpp  Logger.hpp  ServiceRunner.hpp  Utils.hpp  WebSocket.hpp
public/: index.html
src/: BinanceFeed.cpp  Cbot.cpp  ChartServer.cpp  CoinbaseFeed.cpp  KrakenFeed.cpp  ServiceRunner.cpp  WebSocket.cpp  main.cpp
